jhiroeditor2/bin/log
../src/Start_Editor.java:26: error: ';' expected
		JButton_Panel.setLayout(JButton_Panel, BoxLayout.X_AXIS));
		                                                        ^
../src/Start_Editor.java:28: error: '(' or '[' expected
		open_Button.addActionListener(new ActionListener{
		                                                ^
../src/Start_Editor.java:30: error: ';' expected
		public void actionPerformed(ActionEvent e){
		                           ^
../src/Start_Editor.java:30: error: ';' expected
		public void actionPerformed(ActionEvent e){
		                                         ^
../src/Start_Editor.java:33: error: illegal start of expression
			});
			 ^
5 errors
